# r2

./: .gitignore  README.md  copier.yml  pyproject.toml
docs/superpowers/plans/: 2026-03-29-writing-calibration-eval.md
docs/superpowers/specs/: 2026-03-29-writing-calibration-eval-design.md
src/r2/: __init__.py  cli.py
src/r2/rag/: __init__.py  __main__.py  browser.py  cli.py  config.py  download.py  mcp_server.py  web_fetch.py  web_search.py  zotero.py
src/r2/rag/generation/: __init__.py  generate.py  prompts.py
src/r2/rag/ingest/: __init__.py  bib.py  chunker.py  pdf.py  pipeline.py
src/r2/rag/openalex/: __init__.py  client.py
src/r2/rag/retrieval/: __init__.py  embedder.py  search.py  store.py
src/r2/rag/scopus/: __init__.py  client.py
src/r2/rag/semantic_scholar/: __init__.py  client.py  focus.py  types.py
src/r2/scripts/: zotero_add.py  zotero_cli.py
src/r2/skills_engine/: __init__.py  __main__.py  cli.py  config.py  crud.py  dispatch.py  graph.py  indexer.py  mcp_server.py  models.py  usage.py
src/r2/template/: .env.example.jinja  .gitignore.jinja  CLAUDE.md.jinja  copier.yml  ref.bib
src/r2/template/.claude/: directory-structure.md  settings.local.json
src/r2/template/paper/: paper.typ.jinja  style.typ
src/r2/template/revision/: done.md  todo.md
template/: .gitignore.jinja
template/.claude/: lessons.md
template/.claude/agents/: manuscript-writer.md  researcher.md  source-acquirer.md
template/.claude/commands/: acquire.md  model.md  proofread.md  review-section.md  verify.md
template/.claude/rules/: skills-engine.md.jinja
(+83 files in other folders)
