[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r2-research"
version = "0.1.0"
description = "AI-driven research environment for academic papers — powered by Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = []
keywords = ["research", "claude", "rag", "academic", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.0",
    "copier>=9.0",
    "PyMuPDF>=1.24",
    "sentence-transformers>=3.0",
    "chromadb>=1.0",
    "bibtexparser>=1.4",
    "anthropic>=0.40",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "pyzotero>=1.5",
]

[project.optional-dependencies]
download = [
    "scidownl>=1.0",
]
skills-engine = [
    "cognee>=0.5.4",
]
all = [
    "r2-research[download,skills-engine]",
]

[project.scripts]
r2 = "r2.cli:cli"

[project.urls]
Homepage = "https://github.com/shusuke-ioku/r2"
Repository = "https://github.com/shusuke-ioku/r2"

[tool.hatch.build.targets.wheel]
packages = ["src/r2"]
